# one2n-sre-bootcamp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: workflow.yml
app/: config.py
postman/: Student-API.postman_collection.json  local.postman_environment.json  postman:local.postman_environment.json
student-api/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  Vagrantfile  docker-compose.yml  entrypoint.sh  pyproject.toml
student-api/alembic/: env.py
student-api/alembic/versions/: 09892ffffc22_create_students_table.py  0d31afb67203_.py  a1046981cf0a_init.py  aa92bd2532b1_init.py  d802c779ac1f_.py
student-api/app/: main.py
student-api/app/api/v1/: student_routes.py  students.py
student-api/app/core/: config.py  database.py  logger.py
student-api/app/models/: __init__.py  student.py
student-api/app/routes/: system_routes.py
student-api/app/schemas/: student_schemas.py
student-api/app/services/: student_service.py
student-api/nginx/: nginx.conf
student-api/scripts/: app-test.yaml  db-test.yaml  infra-test.yaml  setup-minikube.sh
student-api/tests/: conftest.py  test_health.py  test_students.py
