[project]
name = "student-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "ruff>=0.9.0",
    "uvicorn>=0.45.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.12",
]
